--- a/gateway/package.json
+++ b/gateway/package.json
@@ -1,20 +1,19 @@
 {
-  "name": "gateway",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
-    "cors": "^2.7.1",
-    "debug": "~2.2.0",
-    "express": "~4.13.1",
-    "jade": "~1.11.0",
-    "lodash": "^3.10.1",
-    "mongoose": "^4.1.10",
-    "morgan": "^1.6.1",
-    "serve-favicon": "~2.3.0"
-  }
+    "name": "gateway",
+    "version": "1.0.0",
+    "private": true,
+    "scripts": {
+        "start": "node server.js"
+    },
+    "dependencies": {
+        "bluebird": "^3.0.5",
+        "body-parser": "~1.13.2",
+        "debug": "~2.2.0",
+        "express": "~4.13.1",
+        "jade": "~1.11.0",
+        "lodash": "^3.10.1",
+        "mongoose": "^4.1.10",
+        "morgan": "^1.6.1",
+        "needle": "^0.10.0"
+    }
 }
