--- a/gateway/package.json
+++ b/gateway/package.json
@@ -10,10 +10,14 @@
         "body-parser": "~1.13.2",
         "debug": "~2.2.0",
         "express": "~4.13.1",
+        "express-session": "^1.12.1",
         "jade": "~1.11.0",
         "lodash": "^3.10.1",
         "mongoose": "^4.1.10",
         "morgan": "^1.6.1",
-        "needle": "^0.10.0"
+        "needle": "^0.10.0",
+        "newerror": "^1.0.0",
+        "passport": "^0.3.2",
+        "passport-local": "^1.0.0"
     }
 }
