--- a/services/auth/package.json
+++ b/services/auth/package.json
@@ -1,21 +1,19 @@
 {
-    "name": "webui",
+    "name": "auth",
     "version": "1.0.0",
     "private": true,
     "scripts": {
         "start": "node server.js"
     },
     "dependencies": {
+        "bcrypt-nodejs": "0.0.3",
         "body-parser": "~1.13.2",
-        "cookie-parser": "~1.3.5",
-        "cors": "^2.7.1",
         "debug": "~2.2.0",
         "express": "~4.13.1",
-        "express-session": "^1.12.1",
         "jade": "~1.11.0",
         "lodash": "^3.10.1",
+        "mongoose": "^4.1.10",
         "morgan": "^1.6.1",
-        "passport": "^0.3.2",
-        "serve-favicon": "~2.3.0"
+        "passport": "^0.3.2"
     }
 }
