--- a/services/auth/package.json
+++ b/services/auth/package.json
@@ -10,10 +10,9 @@
         "body-parser": "~1.13.2",
         "debug": "~2.2.0",
         "express": "~4.13.1",
-        "jade": "~1.11.0",
         "lodash": "^3.10.1",
         "mongoose": "^4.1.10",
         "morgan": "^1.6.1",
-        "passport": "^0.3.2"
+        "node-uuid": "^1.4.3"
     }
 }
