--- a/gateway/package.json
+++ b/gateway/package.json
@@ -1,18 +1,20 @@
 {
-    "name": "gateway",
-    "version": "1.0.0",
-    "private": true,
-    "scripts": {
-        "start": "node server.js"
-    },
-    "dependencies": {
-        "bluebird": "^3.0.5",
-        "body-parser": "~1.13.2",
-        "debug": "~2.2.0",
-        "express": "~4.13.1",
-        "lodash": "^3.10.1",
-        "morgan": "^1.6.1",
-        "needle": "^0.10.0",
-        "newerror": "^1.0.0"
-    }
+  "name": "gateway",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "bluebird": "^3.0.5",
+    "body-parser": "~1.13.2",
+    "cors": "^2.7.1",
+    "debug": "~2.2.0",
+    "express": "~4.13.1",
+    "lodash": "^3.10.1",
+    "morgan": "^1.6.1",
+    "needle": "^0.10.0",
+    "newerror": "^1.0.0",
+    "passport": "^0.3.2"
+  }
 }
